@@ -1,11 +1,12 @@
 import java.awt.*;
 import java.awt.event.*;
 import java.util.ArrayList; // vai guardar os inimigos e os tiros em um array
+import java.util.Objects;
 import java.util.Random; // vai gerar inimigos de cores aleatórias
 import javax.swing.*;
 
 public class SpaceInvaders extends JPanel implements ActionListener, KeyListener {
-    class Block {
+    public static class Block {
         // o ideal é criar classes diferentes para cada objeto do jogo, mas assim serve
         int x;
         int y;
@@ -48,7 +49,7 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
     int alienWidth = tileSize*2;
     int alienHeight = tileSize;
     int alienX = tileSize;
-    int alienY = tileSize;
+    int alienY = 2*tileSize;
 
     int alienRows = 2;
     int alienCols = 3;
@@ -64,8 +65,8 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
     Timer gameLoop;
     int score = 0;
     boolean gameOver = false;
-//    int highScore = 0;
-//    int level = 1;
+    int highScore = 0;
+    int wave = 1;
 
     SpaceInvaders() {
         setPreferredSize(new Dimension(boardWidth, boardHeight)); // cria um painel nas dimensões desejadas
@@ -73,21 +74,21 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
         setFocusable(true);
         addKeyListener(this);
 
-        shipImg = new ImageIcon(getClass().getResource("./ship.png")).getImage();
-        alienImg = new ImageIcon(getClass().getResource("./alien.png")).getImage();
-        alienCyanImg = new ImageIcon(getClass().getResource("./alien-cyan.png")).getImage();
-        alienMagentaImg = new ImageIcon(getClass().getResource("./alien-magenta.png")).getImage();
-        alienYellowImg = new ImageIcon(getClass().getResource("./alien-yellow.png")).getImage();
+        shipImg = new ImageIcon(Objects.requireNonNull(getClass().getResource("./ship.png"))).getImage();
+        alienImg = new ImageIcon(Objects.requireNonNull(getClass().getResource("./alien.png"))).getImage();
+        alienCyanImg = new ImageIcon(Objects.requireNonNull(getClass().getResource("./alien-cyan.png"))).getImage();
+        alienMagentaImg = new ImageIcon(Objects.requireNonNull(getClass().getResource("./alien-magenta.png"))).getImage();
+        alienYellowImg = new ImageIcon(Objects.requireNonNull(getClass().getResource("./alien-yellow.png"))).getImage();
 
-        alienImages = new ArrayList<Image>();
+        alienImages = new ArrayList<>();
         alienImages.add(alienImg);
         alienImages.add(alienCyanImg);
         alienImages.add(alienMagentaImg);
         alienImages.add(alienYellowImg);
 
         ship = new Block(shipX, shipY, shipWidth, shipHeight, shipImg);
-        alienFleet = new ArrayList<Block>();
-        ammunition = new ArrayList<Block>();
+        alienFleet = new ArrayList<>();
+        ammunition = new ArrayList<>();
 
         gameLoop = new Timer(1000/60, this);
         createAliens();
@@ -102,16 +103,14 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
     public void draw(Graphics g) {
         g.drawImage(ship.img, ship.x, ship.y, ship.width, ship.height, null);
 
-        for (int i = 0; i < alienFleet.size(); i++) {
-            Block alien = alienFleet.get(i);
+        for (Block alien : alienFleet) {
             if (alien.alive) {
                 g.drawImage(alien.img, alien.x, alien.y, alien.width, alien.height, null);
             }
         }
 
         g.setColor(Color.green);
-        for (int i = 0; i < ammunition.size(); i++) {
-            Block bullet = ammunition.get(i);
+        for (Block bullet : ammunition) {
             if (!bullet.used) {
                 g.fillRect(bullet.x, bullet.y, bullet.width, bullet.height);
             }
@@ -119,10 +118,40 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
 
         g.setColor(Color.white);
         g.setFont(new Font("Arial", Font.BOLD, 32));
+
+        String waveText = "Wave: " + wave; // declaro fora do escopo do if para poder usar no else
+        int waveWidth = g.getFontMetrics().stringWidth(waveText);
+
         if (gameOver) {
-            g.drawString("Game Over: " + score, 10, 35);
+            g.setColor(Color.red);
+
+            String newHighScoreText = "New high score! " + score;
+            String highScoreText = "High Score: " + highScore;
+            String gameOverText = "Game Over.";
+            String gameOverScoreText = "Game Over: " + score;
+            String restartText = "Press any key to restart";
+
+            int newHighScoreWidth = g.getFontMetrics().stringWidth(newHighScoreText);
+            int highScoreWidth = g.getFontMetrics().stringWidth(highScoreText);
+            int gameOverWidth = g.getFontMetrics().stringWidth(gameOverText);
+            int gameOverScoreWidth = g.getFontMetrics().stringWidth(gameOverScoreText);
+            int restartWidth = g.getFontMetrics().stringWidth(restartText);
+
+            int centerX = boardWidth / 2;
+
+            if (score > highScore) {
+                g.drawString(newHighScoreText, centerX - newHighScoreWidth / 2, boardHeight / 2 - 80);
+                g.drawString(waveText, centerX - waveWidth / 2, boardHeight / 2 - 40);
+                g.drawString(gameOverText, centerX - gameOverWidth / 2, boardHeight / 2);
+            } else {
+                g.drawString(highScoreText, centerX - highScoreWidth / 2, boardHeight / 2 - 80);
+                g.drawString(waveText, centerX - waveWidth / 2, boardHeight / 2 - 40);
+                g.drawString(gameOverScoreText, centerX - gameOverScoreWidth / 2, boardHeight / 2);
+            }
+            g.drawString(restartText, centerX - restartWidth / 2, boardHeight / 2 + 40);
         } else {
             g.drawString("Score: " + score, 10, 35);
+            g.drawString("Wave: " + wave, boardWidth - waveWidth - 10, 35);
         }
     }
 
@@ -136,8 +165,8 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
                     alienVelocityX *= -1; // sua velocidade inverte, e vai pro outro lado
                     alien.x += alienVelocityX*2;
 
-                    for (int j = 0; j < alienFleet.size(); j++) {
-                        alienFleet.get(j).y += alienHeight; // faz todos os aliens descerem uma linha
+                    for (Block block : alienFleet) {
+                        block.y += alienHeight; // faz todos os aliens descerem uma linha
                     }
                 }
 
@@ -147,29 +176,27 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
             }
         }
 
-        for (int i = 0; i < ammunition.size(); i++) {
-            Block bullet = ammunition.get(i);
+        for (Block bullet : ammunition) {
             bullet.y += bulletVelocityY;
 
-            for (int j = 0; j < alienFleet.size(); j++) {
-                Block alien = alienFleet.get(j);
-
+            for (Block alien : alienFleet) {
                 if (!bullet.used && alien.alive && collision(alien, bullet)) {
                     alien.alive = false;
                     bullet.used = true;
                     alienCount--;
-                    score ++; // score aumenta a cada alien morto
+                    score++; // score aumenta a cada alien morto
                 }
             }
         }
 
         // não é o método mais eficiente, talvez trocar ArrayList por LinkedList
-        while (ammunition.size() > 0 && (ammunition.get(0).used || ammunition.get(0).y < 0)) {
-            ammunition.remove(0);
+        while (!ammunition.isEmpty() && (ammunition.getFirst().used || ammunition.getFirst().y < 0)) {
+            ammunition.removeFirst();
         }
 
         if (alienCount == 0) {
             score += alienCols * alienRows; // bônus para nível limpo
+            wave++;
             alienCols = Math.min(alienCols + 1, cols/2 - 2); // limita a quantidade máxima de colunas para 6
             alienRows = Math.min(alienRows + 1, rows - 6); // limita a quantidade máxima de linhas para 10
             alienFleet.clear();
@@ -186,11 +213,11 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
             for (int c = 0; c < alienCols; c++) {
                 int randomImageIndex = rand.nextInt(alienImages.size()); // devolve valor entre 0 e 3
                 Block alien = new Block(
-                    alienX + c * alienWidth, // para cada coluna, adiciona um novo inimigo
-                    alienY + r * alienHeight, // após a primeira linha, cria novos aliens em baixo
-                    alienWidth,
-                    alienHeight,
-                    alienImages.get(randomImageIndex)
+                        alienX + c * alienWidth, // para cada coluna, adiciona um novo inimigo
+                        alienY + r * alienHeight, // após a primeira linha, cria novos aliens em baixo
+                        alienWidth,
+                        alienHeight,
+                        alienImages.get(randomImageIndex)
                 );
                 alienFleet.add(alien);
             }
@@ -217,13 +244,21 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
     @Override
     public void keyReleased(KeyEvent e) {
         if (gameOver) {
+            if (score > highScore) {
+                highScore = score;
+            }
+
             ship.x = shipX;
             alienFleet.clear();
             ammunition.clear();
+
             score = 0;
+            wave = 1;
+
             alienVelocityX = 1;
             alienCols = 3;
             alienRows = 2;
+
             gameOver = false;
             createAliens();
             gameLoop.start();
@@ -232,7 +267,7 @@ public class SpaceInvaders extends JPanel implements ActionListener, KeyListener
         } else if (e.getKeyCode() == KeyEvent.VK_LEFT && ship.x - shipVelocityX >= 0) {
             ship.x -= shipVelocityX;
         } else if (e.getExtendedKeyCode() == KeyEvent.VK_SPACE) { // offset de 15/32 deixa no centro (tile 16px, bala tem 2px de largura)
-            Block bullet = new Block(ship.x + shipWidth*15/32, ship.y, bulletWidth, bulletHeight, null); // (x, y, width, height, img)/
+            Block bullet = new Block(ship.x + shipWidth * 15 / 32, ship.y, bulletWidth, bulletHeight, null); // (x, y, width, height, img)/
             ammunition.add(bullet);
         }
     }
